# RLinf

./: .cursorignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTLOOP_ROLLOUT_OPTIMIZATION.md  AGENTS.md  ARCHITECTURE_UPDATE.md  ASYNC_EVENT_LOOP_FIX.md  CHANNEL_COMMUNICATION_IMPLEMENTATION.md  CLAUDE.md  CUDA_ERROR_FIX.md  EVENT_LOOP_CONFLICT_FIX.md  FINAL_ARCHITECTURE_SUMMARY.md  MAFSDPActor_work_summary.md  PR-description.md  PROCESS_POOL_ERROR_FIX.md  RAY_SERIALIZATION_FIX.md  README.md  README.zh-CN.md  RSTAR2_AGENTLOOP_MIGRATION.md  TOOL_AGENT_LOOP_TOKENIZER_FIX.md  WORKER_GROUP_RESULT_FIX.md  convert_demo.py  fusion_result.json  help.sh  invalid_logprob_0.pt  invalid_logprob_1.pt  invalid_logprob_2.pt  invalid_logprob_3.pt  invalid_logprob_4.pt  invalid_logprob_5.pt  invalid_logprob_6.pt  invalid_logprob_7.pt  mp_wrapper.tz  parse_success_once.py  pre_start_ray.sh  project.md  pyproject.toml  read.py  roboverse_data  (+7 more)
.claude/: settings.local.json
GR00T-N1.6-3B/: EXPLAINABILITY.md  LICENSE  PRIVACY.md  README.md  SAFETY_and_SECURITY.md  config.json  embodiment_id.json  model-00001-of-00002.safetensors  model-00002-of-00002.safetensors  (+2 more)
rlinf_dexhand/: README.md  pyproject.toml
rlinf_dexhand/rlinf_dexhand/: __init__.py
rlinf_dexhand/rlinf_dexhand/aoyi/: __init__.py  aoyi_hand_driver.py
rlinf_dexhand/rlinf_dexhand/glove/: glove_expert.py
rlinf_dexhand/rlinf_dexhand/glove/psi_glove_driver/: __init__.py  controller.py  default_config.yaml  filters.py  interface.py  node.py
rlinf_dexhand/rlinf_dexhand/ruiyan/: __init__.py  ruiyan_hand_driver.py
(+2738 files in other folders)
